2002-12-24  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_SLANG): Don't add -lslang to MCLIBS if
	the system S-Lang is rejected.

	* lib/mc.ext.in: Play *.mov by mplayer.

2002-12-23  Pavel Roskin  <proski@gnu.org>

	* configure.in: Enable X11 support by default, use --without-x
	to disable.

2002-12-19  Pavel Roskin  <proski@gnu.org>

	* syntax/perl.syntax: Add separate context for function
	declarations and definitions, highlight prototypes.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_EXTFS_CHECKS): Add check for Perl.
	* configure.in: Substitute Perl location in all extfs scripts
	written in Perl.

2002-12-11  David Martin  <dmartina@excite.com>

	* doc/xnc.hlp: Update GPL (change FSF address
	and move 19xx entries to "year").
	* doc/es/xnc.hlp: Likewise.
	* doc/hu/xnc.hlp: Likewise.
	* doc/it/xnc.hlp: Likewise.
	* doc/ru/xnc.hlp: Likewise.

2002-12-09  Pavel Roskin  <proski@gnu.org>

	* lib/mc.ext.in: Remove ftplist.  Add patchfs.

2002-11-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* autogen.sh: Use $srcdir/configure.mc instead of
	$srcdir/configure if first one exists and is executable.

2002-11-28  Pavel Roskin  <proski@gnu.org>

	* configure.in: Determine which help translations user wants to
	install, based on USE_NLS, LINGUAS and ALL_LINGUAS.
	* doc/Makefile.am: Set SUBDIR to the list of the requested
	translations.

	* acinclude.m4 (MC_EXTFS_CHECKS): New macro.
	(MC_WITH_VFS): Call MC_EXTFS_CHECKS.
	* configure.in: Generate vfs/extfs/uzip.
	* vfs/extfs/uzip: Move to vfs/extfs/uzip.in.
	* vfs/extfs/Makefile.am: Corresponding adjustments.

2002-11-26  Pavel Roskin  <proski@gnu.org>

	* syntax/sql.syntax: Add highlighting for dot and backticks.

2002-11-16  Pavel Roskin  <proski@gnu.org>

	* configure.in: Move check for pwdauth() to MC_MCSERVER_CHECKS.
	* acinclude.m4 (MC_MCSERVER_CHECKS): If using crypt(), check for
	shadow password support.

	* acinclude.m4 (MC_MCSERVER_CHECKS): Don't limit PAM check to